# traffic-analyses

./: .continues-handoff.md  .gitignore  404.html  AGGREGATION_RESULTS_SUMMARY.md  CITATION.cff  CITY_COMPARISON_SMG_vs_BDG.md  CLAUDE.md  DATA_README.md  FIGURE_GENERATION.md  FIGURE_SUMMARY.md  GETTING_STARTED.md  H3_ANALYSIS_EXPLAINER.md  HPC_WORKFLOW.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README_OSM_AGGREGATION.md  ROBUSTNESS_PARAGRAPH.md  WORK_PROGRESS_2026-02-02.md  WORK_PROGRESS_2026-02-03.md  activity_center_analysis.py  advanced_spatial_analysis.py  aggregate_all.ipynb  aggregate_traffic_with_osm.py  bottleneck_analysis.py  centrality_correlations_all_metrics.csv  ceus_trip_difference2.md  check_system_status.py  com.trafficpipeline.collector.plist  compare_legacy_vs_osm.py  compute_centrality_correlations.py  compute_lisa_all_periods.py  compute_lisa_markov.py  config.py  create_here_osm_mapping.py  data_quality_check.py  exploratory_data_analysis.py  foss4g_paper_firman.aux  foss4g_paper_firman.out  foss4g_paper_firman.tex  (+45 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json
adding-a-city/: index.html
analysis_results/: activity_zone_results.csv  advanced_analysis_results.txt  anova_results.csv  anova_three_cities  bottleneck_analysis_results.csv  centrality_correlations.csv  getis_ord_results.csv  h3_r8_bdg.gpkg  h3_r8_jkt.gpkg  h3_r8_smg.gpkg  h3_r9_bdg.gpkg  h3_r9_jkt.gpkg  h3_r9_smg.gpkg  h3_robustness_results.csv  lisa_fdr_corrected.csv  lisa_results.csv  match_quality.csv  morans_i_by_period.csv  morans_i_results.csv  morans_i_sensitivity.csv  poi_congestion_correlations.csv  poi_network_distance_sensitivity.csv  spatial_regression_results.csv
api/: index.html
cli/: index.html
data-format/: index.html
docs/: adding-a-city.md  cli.md  data-format.md  foss4g_abstract_firman.tex  foss4g_abstract_firman.txt  foss4g_bio_firman.txt  foss4g_paper.md  foss4g_paper_firman.md  foss4g_paper_firman.tex  index.md
eda_output/: eda_report.md
figures/: bottleneck_analysis_results.csv  pipeline_architecture.excalidraw  statistics_report.txt
foss4g_paper/: index.html
foss4g_paper_firman/: index.html
lisa_results/: bdg_afternoon_offpeak_lisa.gpkg  bdg_combined_lisa.gpkg  bdg_evening_offpeak_lisa.gpkg  bdg_evening_peak_lisa.gpkg  bdg_late_night_lisa.gpkg  bdg_lisa_timeseries.csv  bdg_lunch_hours_lisa.gpkg  bdg_morning_offpeak_lisa.gpkg  bdg_morning_peak_lisa.gpkg  bdg_night_lisa.gpkg  jkt_lisa_timeseries.csv  lisa_summary_all_periods.csv  smg_afternoon_offpeak_lisa.gpkg  smg_combined_lisa.gpkg  smg_evening_offpeak_lisa.gpkg  smg_evening_peak_lisa.gpkg  smg_late_night_lisa.gpkg  smg_lisa_timeseries.csv  smg_lunch_hours_lisa.gpkg  smg_morning_offpeak_lisa.gpkg  smg_morning_peak_lisa.gpkg  smg_night_lisa.gpkg
markov_results/: bdg_transition_matrix.csv  jkt_transition_matrix.csv  markov_analysis_report.txt  markov_summary.csv  smg_transition_matrix.csv
osm_reference/: bdg_here_to_osm_mapping_20260203.csv  jkt_here_to_osm_mapping_20260320.csv  smg_here_to_osm_mapping_20260202.csv
paper/: body_raw.tex  build_latex.py  ceus_manuscript.tex  ceus_title.tex  comments.md  cover_letter.tex  create_pdf.py  firmanhadi_ceus.aux  firmanhadi_ceus.out  firmanhadi_ceus.tex  firmanhadi_ceus2.out  firmanhadi_ceus2.tex  firmanhadi_ceus_v2.tex  generate_figures.py  generate_missing_figures.py  highlights.txt  manuscript.aux  manuscript.bbl  manuscript.blg  manuscript.fdb_latexmk  manuscript.fls  manuscript.md  manuscript.out  manuscript.tex  manuscript_ceus.out  manuscript_ceus.tex  manuscript_comparison.md  manuscript_raw.tex  manuscript_revision.md  manuscript_v01.txt  paperpal_edit.txt  references.bib  references_table.xlsx  supplementary_ceus.out  supplementary_ceus.tex  supplementary_ceus_v2.tex  supplementary_trip.tex  trip_manuscript.tex  trip_manuscript_rev.tex  ~$references_table.xlsx  (+1 more)
search/: search_index.json
tests/: test_aggregate.py  test_cli.py  test_collector.py  test_config.py  test_utils.py
traffic_bdg_output/: afternoon_offpeak_bdg.gpkg  evening_offpeak_bdg.gpkg  evening_peak_bdg.gpkg  late_night_bdg.gpkg  lunch_hours_bdg.gpkg  mlm_summary_bdg.txt  morning_offpeak_bdg.gpkg  morning_peak_bdg.gpkg  night_bdg.gpkg
traffic_bdg_speed_output/: afternoon_offpeak_bdg_speed.gpkg  anova_results_bdg.csv  mlm_summary_bdg.txt  (+7 more)
(+98 files in other folders)
